<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimaryDark"
            android:scaleType="fitCenter"
            android:src="@drawable/userplaceholder" />

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@null"
                    android:src="@mipmap/baseline_trending_up_black_48" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@null"
                    android:src="@mipmap/baseline_trending_up_black_48" />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@null"
                    android:src="@mipmap/baseline_trending_up_black_48" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile1"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile2"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile3"
                    android:textAlignment="center" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@null"
                    android:src="@mipmap/baseline_trending_up_black_48" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@null"
                    android:src="@mipmap/baseline_trending_up_black_48" />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@null"
                    android:src="@mipmap/baseline_trending_up_black_48" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile4"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile5"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile6"
                    android:textAlignment="center" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

</FrameLayout>